jobs4u.ANTLR/src/main/java/lapr4/jobs4u/importer/csv/RequirementsCsv.g4
grammar RequirementsCsv;

questions: question+ EOF;

body:
	'"' (TEXT | TWO_DIGIT_NUMBER | LETTER | MEMBER)+ (
		'"' (TEXT | TWO_DIGIT_NUMBER | LETTER | MEMBER)+ '"' (
			(TEXT | TWO_DIGIT_NUMBER | LETTER | MEMBER)+
		)?
	)? '"';

questionBody: body;

answer: body;

minimumRequirement: body;

question:
	questionBody ';' answer ';' minimumRequirement (NEWLINE)?;

TWO_DIGIT_NUMBER: NUMBER NUMBER?;
NUMBER: [0-9];
LETTER: [a-zA-Z];
MEMBER: [.,;:/#+!?@*)([\]] | '\'' | '|' | '-';
TEXT: (LETTER | TWO_DIGIT_NUMBER | MEMBER)+;
NEWLINE: ('\r'? '\n')+;
WS: [ \t\n\r]+ -> skip;
